VYRKCATG-143: Adding in some basic styles for search index view mode.

--- a/config/gearwrench/default/core.entity_view_display.media.remote_video.search_teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.media.remote_video.search_teaser.yml
@@ -21,13 +21,9 @@ content:
     label: hidden
     settings:
       image_style: search_teaser_261x256
-      link_image_to: content
-      responsive: true
-      width: 854
-      height: 480
-      autoplay: false
+      link_image_to: ''
     third_party_settings: {  }
-    type: video_embed_field_lazyload
+    type: video_embed_field_thumbnail
     region: content
 hidden:
   created: true
