--- a/config/gearwrench/default/core.entity_view_display.node.page.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.page.teaser.yml
@@ -48,51 +48,38 @@ content:
     label: hidden
     settings:
       image_style: small_1x1
-      thumbnail_style: ''
       responsive_image_style: ''
       media_switch: ''
+      thumbnail_style: ''
       ratio: ''
-      sizes: ''
-      breakpoints:
-        xs:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        sm:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        md:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        lg:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        xl:
-          image_style: ''
-          width: ''
-          breakpoint: ''
+      view_mode: default
+      image: ''
       current_view_mode: teaser
       background: false
       caption:
         title: '0'
         alt: '0'
-      iframe_lazy: true
+      class: ''
+      id: ''
+      link: ''
+      overlay: ''
+      title: ''
+      vanilla: false
       icon: ''
       layout: ''
-      view_mode: ''
       cache: 0
-      optionset: default
       skin: ''
+      fx: ''
       style: ''
       box_caption: ''
       box_caption_custom: ''
-      box_style: ''
       box_media_style: ''
-      grid: 0
+      box_style: ''
+      _uri: ''
+      breakpoints: {  }
+      sizes: ''
       grid_header: ''
+      grid: 0
       grid_medium: 0
       grid_small: 0
     third_party_settings: {  }
