--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -200,6 +200,15 @@ node--full--product-category:
     - core/jquery.once
     - gearwrench/library--jquery-roving-tabindex
 
+# === Node: Search Index === #
+
+node--search-index--product:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/search-index--product.css: { }
+
+
 # === Node: Teaser === #
 
 node--teaser--product:
