--- a/config/gearwrench/default/core.entity_view_display.node.product.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product.teaser.yml
@@ -22,6 +22,7 @@ dependencies:
     - field.field.node.product.field_upc
     - node.type.product
   module:
+    - blazy
     - user
 id: node.product.teaser
 targetEntityType: node
@@ -37,13 +38,46 @@ content:
       link_to_entity: false
     third_party_settings: {  }
   field_media:
-    type: entity_reference_entity_view
+    type: blazy_media
     weight: 0
     region: content
     label: hidden
     settings:
+      image_style: ''
+      responsive_image_style: ''
+      media_switch: ''
+      thumbnail_style: ''
+      ratio: ''
       view_mode: product_teaser
-      link: false
+      image: ''
+      current_view_mode: teaser
+      background: false
+      caption:
+        title: '0'
+        alt: '0'
+      class: ''
+      id: ''
+      link: ''
+      overlay: ''
+      title: ''
+      vanilla: false
+      icon: ''
+      layout: ''
+      cache: 0
+      skin: ''
+      fx: ''
+      style: ''
+      box_caption: ''
+      box_caption_custom: ''
+      box_media_style: ''
+      box_style: ''
+      _uri: ''
+      breakpoints: {  }
+      sizes: ''
+      grid_header: ''
+      grid: 0
+      grid_medium: 0
+      grid_small: 0
     third_party_settings: {  }
 hidden:
   body: true
