VYRKCATG-143: Added styles for product search results.

--- a/config/gearwrench/default/core.entity_view_display.node.product.search_index.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product.search_index.yml
@@ -80,14 +80,6 @@ content:
       sizes: ''
       grid_header: ''
     third_party_settings: {  }
-  field_sku_group:
-    type: string
-    weight: 2
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
 hidden:
   body: true
   field_featured_product: true
@@ -101,6 +93,7 @@ hidden:
   field_related_products: true
   field_set: true
   field_set_components: true
+  field_sku_group: true
   field_upc: true
   langcode: true
   links: true
