--- a/config/gearwrench/default/views.view.acquia_search.yml
+++ b/config/gearwrench/default/views.view.acquia_search.yml
@@ -58,10 +58,10 @@ display:
           id: 1
           total_pages: null
           tags:
-            previous: '‹ Previous'
-            next: 'Next ›'
-            first: '« First'
-            last: 'Last »'
+            previous: '<'
+            next: '>'
+            first: ''
+            last: ''
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
