--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -461,6 +461,19 @@ view--product-category-grid:
     component:
       css/libraries/view/product-category-grid.css: {}
 
+view--acquia-search:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/search.css: {}
+
+view--search:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/search.css: {}
+
+
 view--social-feed:
   version: 1.x
   css:
