VYRKCATG-169: Added the new "Media Page" content type.

--- a/config/gearwrench/local/stage_file_proxy.settings.yml
+++ b/config/gearwrench/local/stage_file_proxy.settings.yml
@@ -1,5 +1,5 @@
 origin: 'https://username:password@stg-www.gearwrench.com'
 origin_dir: sites/gearwrench/files
-use_imagecache_root: false
+use_imagecache_root: true
 hotlink: false
 verify: false
