VYRKCATG-146: Created and styled the new products view block.

--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -455,6 +455,12 @@ view--related-products:
     - gearwrench/library--swiper
     - core/jquery.once
 
+view--new-products:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/new-products.css: {}
+
 view--product-category-grid:
   version: 1.x
   css:
