--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -271,6 +271,14 @@ paragraph--full--content-callout:
     component:
       css/libraries/paragraph/full--content-callout.css: {}
 
+# Embed View #
+paragraph--full--embed-view:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--embed-view.css: {}
+
+
 # Hero #
 paragraph--full--hero:
   version: 1.x
@@ -304,6 +312,7 @@ paragraph--full--featured-content:
   css:
     component:
       css/libraries/paragraph/full--featured-content.css: {}
+
 paragraph--full--featured-content--layout-grid:
   version: 1.x
   css:
@@ -311,6 +320,7 @@ paragraph--full--featured-content--layout-grid:
       css/libraries/paragraph/full--featured-content--layout-grid.css: {}
   dependencies:
     - gearwrench/paragraph--full--featured-content
+
 paragraph--full--featured-content--layout-list:
   version: 1.x
   css:
@@ -318,6 +328,7 @@ paragraph--full--featured-content--layout-list:
       css/libraries/paragraph/full--featured-content--layout-list.css: {}
   dependencies:
     - gearwrench/paragraph--full--featured-content
+
 # Featured: Links #
 paragraph--full--featured-links:
   version: 1.x
@@ -335,6 +346,7 @@ paragraph--full--featured-media:
     - core/drupal
     - core/jquery
     - core/jquery.once
+
 paragraph--full--featured-media--layout-full:
   version: 1.x
   css:
@@ -342,6 +354,7 @@ paragraph--full--featured-media--layout-full:
       css/libraries/paragraph/full--featured-media--layout-full.css: {}
   dependencies:
     - gearwrench/paragraph--full--featured-media
+
 paragraph--full--featured-media--layout-grid:
   version: 1.x
   css:
@@ -349,6 +362,7 @@ paragraph--full--featured-media--layout-grid:
       css/libraries/paragraph/full--featured-media--layout-grid.css: {}
   dependencies:
     - gearwrench/paragraph--full--featured-media
+
 paragraph--full--featured-media--layout-slider:
   version: 1.x
   css:
