--- a/config/gearwrench/default/views.view.acquia_search.yml
+++ b/config/gearwrench/default/views.view.acquia_search.yml
@@ -435,6 +435,7 @@ display:
         operator: AND
         groups:
           1: AND
+      use_ajax: false
     cache_metadata:
       max-age: -1
       contexts:
