Updated megamenu to reusable.

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,23 @@ node_modules
 /source/themes/custom/biplane/
 /source/themes/custom/blackbird/
 /source/themes/custom/blackbirdtheme/
+
+# .DSStore files
+.DS_Store
+config/.DS_Store
+config/crescenttool/.DS_Store
+config/gearwrench/.DS_Store
+config/gearwrench/default/.DS_Store
+docroot/.DS_Store
+docroot/themes/.DS_Store
+docroot/themes/custom/.DS_Store
+docroot/themes/custom/gearwrench/.DS_Store
+docroot/themes/custom/gearwrench/templates/.DS_Store
+docroot/themes/custom/gearwrench/templates/menu/.DS_Store
+source/.DS_Store
+source/themes/.DS_Store
+source/themes/custom/.DS_Store
+source/themes/custom/gearwrench/.DS_Store
+source/themes/custom/gearwrench/styles/.DS_Store
+source/themes/custom/gearwrench/styles/libraries/.DS_Store
+source/themes/custom/gearwrench/styles/libraries/region/.DS_Store
