Added search index styling for more results, moved pager styling to new created views file, added views-view search template, updated node-search-index template

--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -201,6 +201,11 @@ node--full--product-category:
     - gearwrench/library--jquery-roving-tabindex
 
 # === Node: Search Index === #
+node--search-index:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/search-index.css: { }
 
 node--search-index--product:
   version: 1.x
@@ -455,6 +460,12 @@ region--footer-first:
       css/libraries/region/footer.css: {}
 
 # ========= Views ========= #
+
+view:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/view.css: {}
 
 view--related-products:
   version: 1.x
