--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -474,6 +474,8 @@ view--new-products:
   css:
     component:
       css/libraries/view/new-products.css: {}
+  js:
+    js/libraries/view/new-products.js: {}
 
 view--product-category-grid:
   version: 1.x
