--- a/docroot/modules/custom/crescenttool_migrations/config/install/migrate_plus.migration.crescenttool_products.yml
+++ b/docroot/modules/custom/crescenttool_migrations/config/install/migrate_plus.migration.crescenttool_products.yml
@@ -1,6 +1,6 @@
-# Migration configuration for crescenttool product sets.
-id: crescenttool_product_sets
-label: Products - Sets
+# Migration configuration for crescenttool_products content.
+id: crescenttool_products
+label: Products
 migration_group: crescenttool
 source:
   constants:
@@ -10,9 +10,9 @@ source:
   plugin: url
   data_fetcher_plugin: http
   data_parser_plugin: xml
-  urls: 'public://import/pim_data/test-pim.xml'
+  urls: 'public://import/pim_data/pim_export_with_schema.xml'
   namespaces:
-    stibo: "http://www.stibosystems.com/step"
+     "http://www.stibosystems.com/step"
   item_selector: /STEP-ProductInformation/Products/Product/Product
   fields:
     - name: remote_sku
@@ -20,7 +20,7 @@ source:
       selector: '@ID'
     - name: remote_name
       label: SKU Group
-      selector: stibo:Name
+      selector: Name
     - name: remote_sku_group
       label: SKU Group
       selector: ../../Product
@@ -32,19 +32,34 @@ source:
       selector: ../Product
     - name: remote_product_specifications
       label: Product Specifications
-      selector: stibo:Values
+      selector: Values
     - name: remote_product_features
       label: Product Features
       selector: ../Values
     - name: remote_product_classifications
       label: Product Classifications
       selector: ../../Product
+    - name: remote_launch_date
+      label: Launch Date
+      selector: Values
     - name: remote_product_upc
       label: Product UPC
-      selector: stibo:Values
+      selector: Values
+    - name: remote_new_product
+      label: New Product
+      selector: Values
+    - name: remote_featured_product
+      label: Featured Product
+      selector: Values
+    - name: remote_new_product
+      label: New Product
+      selector: Values
+    - name: remote_featured_product
+      label: Featured Product
+      selector: Values
     - name: remote_product_long_description
       label: Product Long Description
-      selector: stibo:Values
+      selector: Values
     - name: remote_sku_overview
       label: SKU Overview
       selector: ../Values
@@ -54,6 +69,9 @@ source:
     - name: remote_product_images
       label: Product Images
       selector: ../../Product
+    - name: remote_related_products
+      label: Related Products
+      selector: Values
   ids:
     remote_sku:
       type: string
@@ -85,32 +103,35 @@ process:
     plugin: get_attribute_value
     source: remote_product_upc
     attribute: ATT539
-  # Set Info
-  field_set:
-    plugin: determine_set_status
-    source: remote_set
+  field_new_product:
+    plugin: get_attribute_value
+    source: remote_new_product
+    attribute: ATT17339
+  field_featured_product:
+    plugin: get_attribute_value
+    source: remote_featured_product
+    attribute: ATT16491
+  field_launch_date:
+    plugin: get_attribute_value
+    source: remote_launch_date
+    attribute: ATT583415
+  # Images
   listing_image:
     source: remote_listing_image
-    plugin: get_media_images
-    image_type: listing_image
-  'field_media/target_id':
-    plugin: migration
-    migration: crescenttool_image_media
-    source: '@listing_image'
-  'field_image/alt': '@listing_image'
-  # Set Components
-  set_components_array:
-    plugin: get_set_components
-    source: remote_set_components
-  field_set_components:
+    plugin: get_listing_image
+  'field_media/target_id': '@listing_image'
+  product_images_array:
+    source: remote_product_images
+    plugin: get_product_images
+  field_product_images:
     plugin: sub_process
-    source: '@set_components_array'
+    source: '@product_images_array'
     include_source: true
     process:
-      target_id: target_id
+      target_id: media_id
   # Product Specifications
   product_specifications_array:
-    plugin: create_unique_term
+    plugin: create_product_specifications
     source: remote_product_specifications
   field_product_specifications:
     plugin: sub_process
@@ -140,8 +161,38 @@ process:
     process:
       vocabulary_id: vid
       target_id: target_id
+  # Related Products
+  related_products_array:
+    plugin: get_related_products
+    source: remote_related_products
+  field_related_products:
+    plugin: sub_process
+    source: '@related_products_array'
+    include_source: true
+    process:
+      target_id: target_id
+  # Set Info
+  field_set:
+    plugin: determine_set_status
+    source: remote_set
+  # Set Components
+  set_components_array:
+    plugin: get_set_components
+    source: remote_set_components
+  field_set_components:
+    plugin: sub_process
+    source: '@set_components_array'
+    include_source: true
+    process:
+      target_id: target_id
+  # Set Content Text
+  field_set_content:
+    plugin: get_attribute_value
+    source: remote_set_contents
+    attribute: ATT921
+  # Used With
+  # Keywords
 destination:
-  plugin: entity:node
-migration_dependencies:
-  required:
-    - crescenttool_products
+  plugin: crescenttool_product
+  bundle: product
+migration_dependencies: []
