Updated preprocess for images to media variables, updated search-index twig with variables and restructured, updated search-index-product and search-index scss to match teaser product and other updates, updated search scss with input styling with icon, hid submit button and other results search field, added pager mobile line height, changed other results to ajax,

--- a/config/gearwrench/default/block.block.gearwrench_page_title.yml
+++ b/config/gearwrench/default/block.block.gearwrench_page_title.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - node
+    - system
   theme:
     - gearwrench
 _core:
@@ -26,7 +27,10 @@ visibility:
       landing_page: landing_page
       page: page
       product_category: product_category
-      product_listing: product_listing
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
+  request_path:
+    id: request_path
+    pages: /search
+    negate: false
