Updated configs to hide other results title, change image teaser settings,

--- a/config/gearwrench/default/block.block.views_block__acquia_search_block_1.yml
+++ b/config/gearwrench/default/block.block.views_block__acquia_search_block_1.yml
@@ -19,7 +19,7 @@ settings:
   id: 'views_block:acquia_search-block_1'
   label: 'Other Results for'
   provider: views
-  label_display: visible
+  label_display: '0'
   views_label: 'Other Results for'
   items_per_page: none
 visibility:
