--- a/config/gearwrench/default/core.entity_view_display.node.landing_page.search_index.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.landing_page.search_index.yml
@@ -9,7 +9,7 @@ dependencies:
     - field.field.node.landing_page.field_components
     - field.field.node.landing_page.field_media
     - field.field.node.landing_page.field_meta_tags
-    - image.style.search_teaser_261x256
+    - image.style.product_small
     - node.type.landing_page
   module:
     - blazy
@@ -35,7 +35,7 @@ content:
     region: content
     label: hidden
     settings:
-      image_style: search_teaser_261x256
+      image_style: product_small
       responsive_image_style: ''
       media_switch: ''
       thumbnail_style: ''
