--- a/config/gearwrench/default/core.entity_view_display.node.product.search_index.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product.search_index.yml
@@ -20,7 +20,7 @@ dependencies:
     - field.field.node.product.field_set_components
     - field.field.node.product.field_sku_group
     - field.field.node.product.field_upc
-    - image.style.search_teaser_261x256
+    - image.style.product_small
     - node.type.product
   module:
     - blazy
@@ -45,12 +45,12 @@ content:
     label: hidden
     settings:
       style: ''
-      image_style: search_teaser_261x256
+      image_style: product_small
       responsive_image_style: ''
       media_switch: ''
       thumbnail_style: ''
       ratio: ''
-      view_mode: search_teaser
+      view_mode: product_teaser
       image: ''
       grid: null
       grid_medium: null
