--- a/config/gearwrench/default/core.entity_view_display.node.product.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product.teaser.yml
@@ -20,6 +20,7 @@ dependencies:
     - field.field.node.product.field_set_components
     - field.field.node.product.field_sku_group
     - field.field.node.product.field_upc
+    - image.style.search_teaser_261x256
     - node.type.product
   module:
     - blazy
@@ -43,12 +44,12 @@ content:
     region: content
     label: hidden
     settings:
-      image_style: ''
+      image_style: search_teaser_261x256
       responsive_image_style: ''
       media_switch: ''
       thumbnail_style: ''
       ratio: ''
-      view_mode: product_teaser
+      view_mode: default
       image: ''
       current_view_mode: teaser
       background: false
