Removed performance device, updated paragraph content display and preprocess, changed sample image settings, updated secondary button styling, updated content styling,

--- a/config/crescenttool/default/core.entity_view_display.paragraph.content.full.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.content.full.yml
@@ -12,7 +12,7 @@ dependencies:
     - field.field.paragraph.content.field_media_layout
     - field.field.paragraph.content.field_style
     - field.field.paragraph.content.field_title
-    - image.style.small
+    - image.style.small_landscape_4x3
     - paragraphs.paragraphs_type.content
   module:
     - blazy
@@ -49,52 +49,17 @@ content:
     region: content
     label: hidden
     settings:
-      image_style: small
-      thumbnail_style: ''
+      image_style: small_landscape_4x3
       responsive_image_style: ''
       media_switch: ''
+      thumbnail_style: ''
       ratio: ''
-      sizes: ''
-      breakpoints:
-        xs:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        sm:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        md:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        lg:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        xl:
-          image_style: ''
-          width: ''
-          breakpoint: ''
+      view_mode: default
       current_view_mode: full
       background: false
       caption:
         title: '0'
         alt: '0'
-      icon: ''
-      layout: ''
-      view_mode: ''
-      cache: 0
-      skin: ''
-      style: ''
-      box_caption: ''
-      box_caption_custom: ''
-      box_style: ''
-      box_media_style: ''
-      grid: 0
-      grid_header: ''
-      grid_medium: 0
-      grid_small: 0
       class: ''
       id: ''
       image: ''
@@ -102,8 +67,23 @@ content:
       overlay: ''
       title: ''
       vanilla: false
+      icon: ''
+      layout: ''
+      cache: 0
+      skin: ''
       fx: ''
+      style: ''
+      box_caption: ''
+      box_caption_custom: ''
+      box_media_style: ''
+      box_style: ''
       _uri: ''
+      breakpoints: {  }
+      sizes: ''
+      grid_header: ''
+      grid: 0
+      grid_medium: 0
+      grid_small: 0
     third_party_settings: {  }
   field_title:
     type: string
