--- a/config/crescenttool/default/image.settings.yml
+++ b/config/crescenttool/default/image.settings.yml
@@ -1,12 +1,5 @@
-color_selector:
-  plugin_id: html_color
-  plugin_settings:
-    html_color: {  }
-image_selector:
-  plugin_id: basic
-  plugin_settings:
-    basic: {  }
-font_selector:
-  plugin_id: basic
-  plugin_settings:
-    basic: {  }
+preview_image: core/modules/image/sample.png
+allow_insecure_derivatives: false
+suppress_itok_output: false
+_core:
+  default_config_hash: k-yDFHbqNfpe-Srg4sdCSqaosCl2D8uwyEY5esF8gEw
