added sticky menu to product pages.

--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -132,6 +132,14 @@ block--system--system-breadcrumb-block:
     component:
       css/libraries/block/breadcrumbs.css: {}
 
+block--gearwrench-core--product-buy-now-sticky:
+  version: 1.x
+  css:
+    component:
+      css/libraries/block/product-buy-now-sticky.css: { }
+  js:
+    js/libraries/block/product-buy-now-sticky.js: {}
+
 
 
 # ========= Forms ========= #
