--- a/config/crescenttool/default/core.entity_view_display.paragraph.section.full.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.section.full.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.paragraph.section.field_html_anchor
     - field.field.paragraph.section.field_image_background
     - field.field.paragraph.section.field_style
+    - field.field.paragraph.section.field_title
     - image.style.large_1x1
     - paragraphs.paragraphs_type.section
   module:
@@ -21,7 +22,7 @@ bundle: section
 mode: full
 content:
   field_components:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       view_mode: full
@@ -31,7 +32,7 @@ content:
     region: content
   field_image_background:
     type: bg_image_formatter
-    weight: 1
+    weight: 2
     region: content
     label: hidden
     settings:
@@ -49,6 +50,14 @@ content:
         bg_image_path_format: relative
         bg_image_background_size_ie8: 0
         bg_image_important: 0
+    third_party_settings: {  }
+  field_title:
+    type: string
+    weight: 0
+    region: content
+    label: above
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
 hidden:
   field_background_color: true
