--- a/config/crescenttool/default/core.entity_view_display.paragraph.section.preview.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.section.preview.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.paragraph.section.field_html_anchor
     - field.field.paragraph.section.field_image_background
     - field.field.paragraph.section.field_style
+    - field.field.paragraph.section.field_title
     - image.style.thumbnail_cropped
     - paragraphs.paragraphs_type.section
   module:
@@ -25,7 +26,6 @@ third_party_settings:
       weight: 1
       format_type: fieldset
       format_settings:
-        label: Components
         description: ''
         id: ''
         classes: ''
@@ -94,6 +94,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_title:
+    type: string
+    weight: 0
+    region: content
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
 hidden:
   field_background_color: true
   search_api_excerpt: true
