changed section opacity to 1 and title position and zindex

--- a/config/crescenttool/default/field.field.paragraph.section.field_background_color.yml
+++ b/config/crescenttool/default/field.field.paragraph.section.field_background_color.yml
@@ -17,8 +17,8 @@ required: false
 translatable: true
 default_value:
   -
-    color: '#ffffff'
-    opacity: 0.6
+    color: '#FFFFFF'
+    opacity: !!float 1
 default_value_callback: ''
 settings:
   opacity: 1
