Added ps-utid.js and pricespider-generic css, updated and added pricespider keys and check for wherebuy page, removed console from new-products.js

--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -100,6 +100,7 @@ library--price-spider:
   version: 1.x
   js:
     //cdn.pricespider.com/1/lib/ps-widget.js: { type: external, attributes: { async: true } }
+    //cdn.pricespider.com/1/2377/ps-utid.js: { type: external, attributes: { async: true } }
 
 library--add-to-any:
   version: 1.x
@@ -139,6 +140,12 @@ block--gearwrench-core--product-buy-now-sticky:
       css/libraries/block/product-buy-now-sticky.css: { }
   js:
     js/libraries/block/product-buy-now-sticky.js: {}
+
+block--block-content--block-contentae031edc-76e4-4763-ae2c-d0f8732e35ea:
+  version: 1.x
+  css:
+    component:
+      css/libraries/block/pricespider-generic-widget.css: { }
 
 
 
