feature/VYRKCATG-146: Fixed the local settings for crescenttool migrations.

--- a/config/crescenttool/local/core.extension.yml
+++ b/config/crescenttool/local/core.extension.yml
@@ -33,6 +33,7 @@ module:
   config_split: 0
   contextual: 0
   crescenttool_core: 0
+  crescenttool_migrations: 0
   crop: 0
   ctools: 0
   current_page_crumb: 0
@@ -58,7 +59,6 @@ module:
   file_mdm_font: 0
   filter: 0
   focal_point: 0
-  gearwrench_migrations: 0
   gearwrench_product_category_filtering: 0
   google_tag: 0
   help: 0
