set title block to not show on where-to-buy

--- a/config/crescenttool/default/block.block.crescenttool_page_title.yml
+++ b/config/crescenttool/default/block.block.crescenttool_page_title.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - node
+    - system
   theme:
     - crescenttool
 id: crescenttool_page_title
@@ -27,3 +28,7 @@ visibility:
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
+  request_path:
+    id: request_path
+    pages: /where-to-buy
+    negate: true
