--- a/config/crescenttool/default/core.entity_view_display.paragraph.step.preview.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.step.preview.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
     - field.field.paragraph.step.field_content
-    - field.field.paragraph.step.field_pr
+    - field.field.paragraph.step.field_pre_title
     - field.field.paragraph.step.field_title
     - paragraphs.paragraphs_type.step
   module:
@@ -22,7 +22,7 @@ content:
     third_party_settings: {  }
     type: text_default
     region: content
-  field_pr:
+  field_pre_title:
     type: string
     weight: 0
     region: content
