--- a/config/crescenttool/default/field.field.paragraph.step.field_pre_title.yml
+++ b/config/crescenttool/default/field.field.paragraph.step.field_pre_title.yml
@@ -1,12 +1,12 @@
-uuid: 73aa0af4-f734-4847-8d8a-85fde51fdd6b
+uuid: 5747fac8-3dcb-44ef-bd2e-39dcb8dc25ab
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_pr
+    - field.storage.paragraph.field_pre_title
     - paragraphs.paragraphs_type.step
-id: paragraph.step.field_pr
-field_name: field_pr
+id: paragraph.step.field_pre_title
+field_name: field_pre_title
 entity_type: paragraph
 bundle: step
 label: Pre-Title
