--- a/config/crescenttool/default/field.storage.paragraph.field_pre_title.yml
+++ b/config/crescenttool/default/field.storage.paragraph.field_pre_title.yml
@@ -1,11 +1,11 @@
-uuid: 9f446750-1262-41ed-8208-2f90188823d8
+uuid: f24c8517-c04e-43bf-8a0a-40ce183356b9
 langcode: en
 status: true
 dependencies:
   module:
     - paragraphs
-id: paragraph.field_pr
-field_name: field_pr
+id: paragraph.field_pre_title
+field_name: field_pre_title
 entity_type: paragraph
 type: string
 settings:
