--- a/config/crescenttool/default/core.entity_form_display.paragraph.step.default.yml
+++ b/config/crescenttool/default/core.entity_form_display.paragraph.step.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.step.field_content
-    - field.field.paragraph.step.field_pr
+    - field.field.paragraph.step.field_pre_title
     - field.field.paragraph.step.field_title
     - paragraphs.paragraphs_type.step
   module:
@@ -22,7 +22,7 @@ content:
     third_party_settings: {  }
     type: text_textarea
     region: content
-  field_pr:
+  field_pre_title:
     weight: 0
     settings:
       size: 8
