--- a/config/gearwrench/default/core.entity_view_display.node.product.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product.teaser.yml
@@ -20,7 +20,7 @@ dependencies:
     - field.field.node.product.field_set_components
     - field.field.node.product.field_sku_group
     - field.field.node.product.field_upc
-    - image.style.search_teaser_261x256
+    - image.style.product_small
     - node.type.product
   module:
     - blazy
@@ -44,7 +44,7 @@ content:
     region: content
     label: hidden
     settings:
-      image_style: search_teaser_261x256
+      image_style: product_small
       responsive_image_style: ''
       media_switch: ''
       thumbnail_style: ''
