MediaTypes: Changed the media types list.

--- a/config/gearwrench/default/field.storage.node.field_media_type.yml
+++ b/config/gearwrench/default/field.storage.node.field_media_type.yml
@@ -12,23 +12,20 @@ type: list_string
 settings:
   allowed_values:
     -
-      value: Document
-      label: Document
+      value: Brochure
+      label: Brochure
     -
-      value: 'Featured News'
-      label: 'Featured News'
+      value: Catalog
+      label: Catalog
     -
-      value: Image
-      label: Image
+      value: 'In the News'
+      label: 'In the News'
     -
-      value: News
-      label: News
+      value: 'News Release'
+      label: 'News Release'
     -
       value: Video
       label: Video
-    -
-      value: 'Zip File'
-      label: 'Zip File'
   allowed_values_function: ''
 module: options
 locked: false
