--- a/config/gearwrench/default/field.field.node.media_page.field_media_type.yml
+++ b/config/gearwrench/default/field.field.node.media_page.field_media_type.yml
@@ -17,7 +17,7 @@ required: true
 translatable: false
 default_value:
   -
-    value: Image
+    value: Brochure
 default_value_callback: ''
 settings: {  }
 field_type: list_string
